[tool.poetry]
name = "requests-json-datetime"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "requests_json_datetime"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
google-api-python-client = "^2.82.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
